# inkscape

./: .gitignore  .gitlab-ci.yml  .gitmodules  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  INSTALL.md  README.md  README.rst  TRANSLATORS  _clang-format  config.h.cmake  configure.ac  flake.nix  inkscape.desktop.in  inkscape.desktop.template  install_dependencies.sh  org.inkscape.Inkscape.appdata.xml.in
CMakeScripts/: CodeCoverageInkscape.cmake  ConfigCPack.cmake  ConfigEnv.cmake  DefineDependsandFlags.cmake  Dist.cmake  HelperFunctions.cmake  HelperMacros.cmake  Install.cmake  InstallMSYS2.cmake  UnitTest.cmake
CMakeScripts/Modules/: FindGtkMacIntegration.cmake  FindGtkSpell.cmake  FindMacIntegration.cmake  FindWasmer.cmake
buildtools/: check_license_headers.py  install_dependencies.sh  media-check-icons.py  media-check-ui.py  msys2checkdeps.py  msys2installdeps.sh  windows-deps-clickHere.bat  windows-deps-install-wix4.ps1  windows-deps-part2.ps1  windows-installFullDevEnv-clickHere.bat  windows-installFullDevEnv-part2.ps1
buildtools/windows-dev-vm/: README.md  Vagrantfile
debian/: control
doc/: SOCKET_SERVER_PROTOCOL.md  SOCKET_SERVER_README.md  readme.md  ui-text-styleguide.md
doc/building/: general_advanced.md  linux.md  (+2 more)
man/: fix-roff-punct  inkscape.de.pod.in  inkscape.fr.pod.in  inkscape.hr.pod.in  inkscape.hu.pod.in  inkscape.ko.pod.in  inkscape.pod.in  inkscape.pt_BR.pod.in  inkscape.sv.pod.in  inkscape.zh_TW.pod.in  inkview.de.pod.in  inkview.hr.pod.in  inkview.hu.pod.in  inkview.pt_BR.pod.in  inkview.sv.pod.in
packaging/: AppRun
po/: CMakeLists.txt  POTFILES.in  POTFILES.inx.in  POTFILES.py.in  POTFILES.skip  POTFILES.src.in  POTFILES.ui.in  am.po  ar.po  as.po  az.po  be.po  bg.po  bn.po  bn_BD.po  br.po  brx.po  ca.po  ca@valencia.po  ca_valencia.po  cs.po  da.po  de.po  doi.po  dz.po  el.po  en_AU.po  en_CA.po  en_GB.po  en_US@piglatin.po  eo.po  es.po  es_MX.po  et.po  eu.po  fa.po  fi.po  fr.po  ga.po  gl.po  (+59 more)
share/: CMakeLists.txt  README.md  inkscape.cmb
snap/: README.md  snapcraft.yaml
src/: CMakeLists.txt  attribute-rel-css.cpp  attribute-rel-svg.cpp  attribute-rel-util.cpp  attribute-sort-util.cpp  attributes.cpp  attributes.h  auto-save.cpp  axis-manip.cpp  box3d-side.cpp  box3d-side.h  cms-color-types.h  cms-system.h  color-profile-cms-fns.h  color-profile.cpp  color-rgba.h  color.cpp  color.h  colorspace.h  composite-undo-stack-observer.cpp  conditions.cpp  conn-avoid-ref.cpp  context-fns.cpp  deptool.cpp  desktop-events.cpp  desktop-style.cpp  desktop.cpp  desktop.h  device-manager.cpp  device-manager.h  document-subset.cpp  document-undo.cpp  document-undo.h  document-update.cpp  document-update.h  document.cpp  document.h  doxygen-main.dox  ege-color-prof-tracker.cpp  ege-color-prof-tracker.h  (+106 more)
src/extension/plugins/grid2/: CMakeLists.txt  grid.cpp  grid.h
src/extension/plugins/xmpp/: CMakeLists.txt  libxmpp.inx  sxe.cpp  sxe.h  xmpp.cpp  xmpp.h
src/extension/plugins/xmpp/web/: index.xhtml  strophe.js  svg.js
testfiles/: CMakeLists.txt  compare-paths-test.h  doc-per-case-test.cpp  doc-per-case-test.h  fuzzer.cpp  lpespaths-test.h
testfiles/socket_tests/: CMakeLists.txt  README.md  test_socket_commands.cpp  test_socket_handshake.cpp  test_socket_integration.cpp  test_socket_protocol.cpp  test_socket_responses.cpp
testfiles/socket_tests/data/: expected_responses.txt  test_commands.txt
(+1946 files in other folders)
